

= Änderungen aus Nutzersicht =
* Gateway-Liste:
** jeder Gateway ist verlinkt mit einer Karte auf der die Route vom eigenen AP zum Gateway visualisiert ist
** das Verbindungs-Protokoll ist nun separat erreichbar
* Einblendung der Karte auf der Startseite
* Unterscheidung von opennet- und Internet-URL ist nicht mehr nötig:
** Modulinstallation
** Zertifikatseinreichung
* Status-Anzeige:
** Nutzer-Tunnel: UGW-Server (erina/megumi/subaru) wird angezeigt
** UGW/Spender: Anzahl der weitergeleiteten Nutzerverbindungen wird angezeigt
* UGW-APs ohne lokale Mesh-Interfaces (nur via OpenVPN) sind nun auch über ihre Main-IP ansprechbar
** zuvor: nur 10.2.x.y (statt 192.168.x.y)
* Fehlerkorrekturen:
** POE-Passthrough-Umschalter funktioniert nun
** UGW: Korrektur der Ermittlung und Announcierung der Uplink-Bandbreite
** CSR-Daten direkt nach Erzeugung anzeigen (zuvor war ein Neuladen nötig)
** zeitnahe Erkennung einer ungeklärten Race-Condition bei parallelem OpenVPN-Start
** verzögerte UGW-Portweiterleitung korrigiert
** veraltete olsr-Announcierungen nicht mehr existenter Dienste werden nun entfernt
** Status: Darstellung von multi-VAP-Konfigurationen ([[https://dev.opennet-initiative.de/ticket/134 Bug #134]])
** Status: Darstellung von Zonen mit mehreren Interfaces

= Interne Änderungen =
* root-Passwort ist bei einer Erstinstallation leer
** zuvor wurde "admin" vorgegeben, da openwrt bis einschließlich Barrier Breaker den ssh-Dienst nur startete wenn ein Passwort gesetzt ist
* bei Verlust einer Gateway-Verbindung werden alle Gateway-Dienste dieses Hosts als unklar definiert
** bisher dauerte die Verbindungsunterbrechung durch die Wartezeit auf die anderen Dienste desselben Hosts bis zu zehn Minuten
* Monitoring:
** die Ping-Latenz zum UGW und zum VPN-Tunnel-Gateway ist via munin auswertbar
* OpenVPN-Client: Umstellung von "ns-cert-type" auf "remote-cert-tls"

= Bemerkenswertes / Fehler / Mängel =

= Aktualisierungshinweis =